--- a/weechat/irc.conf
+++ b/weechat/irc.conf
@@ -94,6 +94,7 @@ lag_reconnect = 0
 lag_refresh_interval = 1
 notify_check_ison = 1
 notify_check_whois = 5
+sasl_fail_unavailable = on
 send_unknown_commands = off
 whois_double_nick = off
 
@@ -129,12 +130,13 @@ nicks_alternate = on
 notify = ""
 password = ""
 proxy = ""
+realname = "davidosomething"
 sasl_fail = continue
+sasl_key = "%h/../../.secret/weechat/ecdsa.pem"
+sasl_mechanism = ecdsa-nist256p-challenge
 sasl_password = ""
 sasl_timeout = 15
-sasl_mechanism = ecdsa-nist256p-challenge
 sasl_username = "davidosomething"
-sasl_key = "%h/../../.secret/weechat/ecdsa.pem"
 ssl = on
 ssl_cert = ""
 ssl_dhkey_size = 2048
@@ -142,7 +144,6 @@ ssl_fingerprint = ""
 ssl_priorities = "NORMAL:-VERS-SSL3.0"
 ssl_verify = on
 username = "davidosomething"
-realname = "davidosomething"
 
 [server]
 freenode.addresses = "chat.freenode.net/6697"
