--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -73,7 +73,8 @@ set-option          -g  set-titles-string   \
 # ============================================================================
 # Statusline
 
-set-option          -g  status-utf8         on
+# useless https://github.com/tmux/tmux/issues/230
+#set-option          -g  status-utf8         on
 
 # Status bar on top -- looks better when vim active since commandline is at
 # bottom
