remove utf-8 settings from tmux conf -- deprecated

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -21,9 +21,9 @@ set-option        -g  @tpm_plugins '  \
 # ============================================================================
 # Environment
 
-# Use UTF-8
-set-option          -g  utf8
-set-window-option   -g  utf8                on
+# Use UTF-8 - deprecated
+#set-option          -g  utf8
+#set-window-option   -g  utf8                on
 
 # $TERM -- note that this uses a custom terminfo built against xterm so it
 # won't work in some terminal emulators. See $DOTFILES/terminfo/README.md
