--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -27,8 +27,8 @@ set-option        -g  @tpm_plugins '  \
 
 # $TERM -- note that this uses a custom terminfo built against xterm so it
 # won't work in some terminal emulators. See $DOTFILES/terminfo/README.md
-# OSX: assume I'm using this custom xterm terminfo in iterm2
-if-shell 'test "${DOTFILES_DISTRO}" = "osx"' \
+# mac: assume I'm using this custom xterm terminfo in iterm2
+if-shell 'test "${DOTFILES_DISTRO}" = "mac"' \
   'set-option -g default-terminal "xterm-256color-italic"'
 # Arch Linux: tmux-256color terminfo comes with tmux
 if-shell 'test "${DOTFILES_DISTRO}" = "archlinux"' \
