fix tmux ifshell gt

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,7 +4,7 @@
 # It is not symlinked into home.
 #
 
-if-shell "[[ $(tmux -V | cut -d' ' -f2) > 2 ]]" \
+if-shell "[[ $(tmux -V | cut -d' ' -f2) -gt 2) ]]" \
   'set-environment -g TMUX_2 "1"'
 
 # ============================================================================
