remove seconds from weechat time

--- a/weechat/weechat.conf
+++ b/weechat/weechat.conf
@@ -26,7 +26,7 @@ buffer_search_case_sensitive = off
 buffer_search_force_default = off
 buffer_search_regex = off
 buffer_search_where = prefix_message
-buffer_time_format = "%H:%M:%S"
+buffer_time_format = "%H:%M"
 color_basic_force_bold = off
 color_inactive_buffer = on
 color_inactive_message = on
@@ -102,7 +102,7 @@ prefix_same_nick = ""
 prefix_suffix = "|"
 quote_nick_prefix = "<"
 quote_nick_suffix = ">"
-quote_time_format = "%H:%M:%S"
+quote_time_format = "%H:%M"
 read_marker = line
 read_marker_always_show = off
 read_marker_string = "- "
