--- a/weechat/irc.conf
+++ b/weechat/irc.conf
@@ -27,7 +27,6 @@ highlight_channel = "$nick"
 highlight_pv = "$nick"
 highlight_server = "$nick"
 highlight_tags_restrict = "irc_privmsg,irc_notice"
-item_away_message = on
 item_channel_modes_hide_args = "k"
 item_display_server = buffer_plugin
 item_nick_modes = on
@@ -36,9 +35,6 @@ join_auto_add_chantype = off
 msgbuffer_fallback = current
 new_channel_position = none
 new_pv_position = none
-nick_color_force = ""
-nick_color_hash = sum
-nick_color_stop_chars = "_|["
 nick_completion_smart = speakers
 nick_mode = prefix
 nick_mode_empty = off
@@ -65,7 +61,6 @@ topic_strip_colors = off
 
 [color]
 input_nick = lightcyan
-item_away = yellow
 item_channel_modes = default
 item_lag_counting = default
 item_lag_finished = yellow
@@ -147,14 +142,80 @@ username = "davidosomething"
 
 [server]
 freenode.addresses = "chat.freenode.net/6697"
+freenode.proxy
+freenode.ipv6
 freenode.ssl = on
+freenode.ssl_cert
+freenode.ssl_priorities
+freenode.ssl_dhkey_size
+freenode.ssl_fingerprint
+freenode.ssl_verify
+freenode.password
+freenode.capabilities
+freenode.sasl_mechanism
+freenode.sasl_username
+freenode.sasl_password
+freenode.sasl_key
+freenode.sasl_timeout
+freenode.sasl_fail
 freenode.autoconnect = on
+freenode.autoreconnect
+freenode.autoreconnect_delay
+freenode.nicks
+freenode.nicks_alternate
 freenode.username = "davidosomething"
 freenode.realname = "davidosomething"
+freenode.local_hostname
+freenode.command
+freenode.command_delay
 freenode.autojoin = "#archlinux,#bash,#git,##javascript,##linux,#neovim,#vim,#web,#zsh"
+freenode.autorejoin
+freenode.autorejoin_delay
+freenode.connection_timeout
+freenode.anti_flood_prio_high
+freenode.anti_flood_prio_low
+freenode.away_check
+freenode.away_check_max_nicks
+freenode.default_msg_kick
+freenode.default_msg_part
+freenode.default_msg_quit
+freenode.notify
 esper.addresses = "irc.esper.net/6697"
+esper.proxy
+esper.ipv6
 esper.ssl = on
+esper.ssl_cert
+esper.ssl_priorities
+esper.ssl_dhkey_size
+esper.ssl_fingerprint
+esper.ssl_verify
+esper.password
+esper.capabilities
+esper.sasl_mechanism
+esper.sasl_username
+esper.sasl_password
+esper.sasl_key
+esper.sasl_timeout
+esper.sasl_fail
 esper.autoconnect = on
+esper.autoreconnect
+esper.autoreconnect_delay
+esper.nicks
+esper.nicks_alternate
 esper.username = "davidosomething"
 esper.realname = "davidosomething"
+esper.local_hostname
+esper.command
+esper.command_delay
 esper.autojoin = "#FTB,#computercraft,#enderio,#forestry,#journeymap,#rftools,#vazkii"
+esper.autorejoin
+esper.autorejoin_delay
+esper.connection_timeout
+esper.anti_flood_prio_high
+esper.anti_flood_prio_low
+esper.away_check
+esper.away_check_max_nicks
+esper.default_msg_kick
+esper.default_msg_part
+esper.default_msg_quit
+esper.notify
