revert sasl, zplug move

--- a/weechat/irc.conf
+++ b/weechat/irc.conf
@@ -127,8 +127,8 @@ password = ""
 proxy = ""
 realname = "davidosomething"
 sasl_fail = continue
-sasl_key = ""
-sasl_mechanism
+sasl_key = "%h/../../.secret/weechat/ecdsa.pem"
+sasl_mechanism = ecdsa-nist256p-challenge
 sasl_password = ""
 sasl_timeout = 15
 sasl_username = "davidosomething"
@@ -152,12 +152,12 @@ freenode.ssl_fingerprint
 freenode.ssl_verify
 freenode.password
 freenode.capabilities
-freenode.sasl_fail = continue
-freenode.sasl_key = "%h/../../.secret/weechat/ecdsa.pem"
-freenode.sasl_mechanism = ecdsa-nist256p-challenge
-freenode.sasl_password = ""
-freenode.sasl_timeout = 15
-freenode.sasl_username = "davidosomething"
+freenode.sasl_mechanism
+freenode.sasl_username
+freenode.sasl_password
+freenode.sasl_key
+freenode.sasl_timeout
+freenode.sasl_fail
 freenode.autoconnect = on
 freenode.autoreconnect
 freenode.autoreconnect_delay
