--- a/weechat/weechat.conf
+++ b/weechat/weechat.conf
@@ -220,7 +220,7 @@ max_visited_buffers = 50
 
 [network]
 connection_timeout = 60
-gnutls_ca_file = "/usr/share/curl/ca-bundle.crt"
+gnutls_ca_file = "~/.dotfiles/weechat/ca-bundle.crt"
 gnutls_handshake_timeout = 30
 proxy_curl = ""
 
