fix tmux but not DRY :(

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,9 +4,6 @@
 # It is not symlinked into home.
 #
 
-if-shell "[[ $(tmux -V | cut -d' ' -f2) -gt 2) ]]" \
-  'set-environment -g TMUX_2 "1"'
-
 # ============================================================================
 # Plugins via tpm
 
@@ -40,12 +37,19 @@ set-option          -g  focus-events        on
 set-option          -g  history-limit       10000
 
 # ============================================================================
+# Display settings
+if-shell '[[ \"$(tmux -V | cut -d' ' -f2)\" -gt 2 ]]' \
+  'set-option -ga terminal-overrides ",xterm-256color-italic:Tc"'
+
+# ============================================================================
 # Mouse settings
-if-shell '[[ -n "$TMUX_2" ]]'   'source-file "${DOTFILES}/tmux/t2mouse.conf"'
+if-shell '[[ \"$(tmux -V | cut -d' ' -f2)\" -gt 2 ]]' \
+  'source-file "${DOTFILES}/tmux/t2mouse.conf"'
 
 # ============================================================================
 # Keyboard settings
-if-shell '[[ -n "$TMUX_2" ]]'   'source-file "${DOTFILES}/tmux/t2keyboard.conf"'
+if-shell '[[ \"$(tmux -V | cut -d' ' -f2)\" -gt 2 ]]' \
+  'source-file "${DOTFILES}/tmux/t2keyboard.conf"'
 
 # ----------------------------------------------------------------------------
 # Keycodes
