--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -38,17 +38,17 @@ set-option          -g  history-limit       10000
 
 # ============================================================================
 # Display settings
-if-shell '[[ \"$(tmux -V | cut -d' ' -f2)\" -gt 2 ]]' \
+if-shell '[[ "$(tmux -V | cut -d' ' -f2)" -gt 2 ]]' \
   'set-option -ga terminal-overrides ",xterm-256color-italic:Tc"'
 
 # ============================================================================
 # Mouse settings
-if-shell '[[ \"$(tmux -V | cut -d' ' -f2)\" -gt 2 ]]' \
+if-shell '[[ "$(tmux -V | cut -d' ' -f2)" -gt 2 ]]' \
   'source-file "${DOTFILES}/tmux/t2mouse.conf"'
 
 # ============================================================================
 # Keyboard settings
-if-shell '[[ \"$(tmux -V | cut -d' ' -f2)\" -gt 2 ]]' \
+if-shell '[[ "$(tmux -V | cut -d' ' -f2)" -gt 2 ]]' \
   'source-file "${DOTFILES}/tmux/t2keyboard.conf"'
 
 # ----------------------------------------------------------------------------
