tmux version and activity

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -22,13 +22,16 @@ set-option        -g  @tpm_plugins '  \
 #set-option          -g  utf8
 #set-window-option   -g  utf8                on
 
+run-shell "tmux set-environment -g TMUX_VERSION_MAJOR $(tmux -V | cut -d' ' -f2 | cut -d'.' -f1 | sed 's/[^0-9]*//g')"
+run-shell "tmux set-environment -g TMUX_VERSION_MINOR $(tmux -V | cut -d' ' -f2 | cut -d'.' -f2 | sed 's/[^0-9]*//g')"
+
 # $TERM -- note that this uses a custom terminfo built against xterm so it
 # won't work in some terminal emulators. See $DOTFILES/terminfo/README.md
 # mac: assume I'm using this custom xterm terminfo in iterm2
 if-shell 'test "${DOTFILES_DISTRO}" = "mac"' \
   'set-option -g default-terminal "xterm-256color-italic"'
-# Arch Linux: tmux-256color terminfo comes with tmux
-if-shell 'test "${DOTFILES_DISTRO}" = "archlinux"' \
+# Linux: tmux-256color terminfo _likely_ comes with tmux
+if-shell 'test "${DOTFILES_OS}" = "Linux"' \
   'set-option -g default-terminal "tmux-256color"'
 
 # for vim, focus pane on event like filemodified alerts
@@ -40,6 +43,13 @@ set-option          -g  history-limit       10000
 # Display settings
 if-shell '[[ "$(tmux -V | cut -d' ' -f2)" -gt 2 ]]' \
   'set-option -ga terminal-overrides ",xterm-256color-italic:Tc"'
+
+# Resize panes immediately for all clients
+setw -g aggressive-resize on
+
+# Check for activity and set status
+setw -g monitor-activity on
+set -g visual-activity on
 
 # ============================================================================
 # Mouse settings
