tmux 1 mouse setup

--- a/tmux/t2mouse.conf
+++ b/tmux/t2mouse.conf
@@ -1,5 +1,7 @@
-# ----------------------------------------------------------------------------
-# shell scrolling (not for submode)
+# ============================================================================
+# tmux 2 mouse scrolling (not for submode)
+# ============================================================================
+
 set-option -g mouse on
 bind -n WheelUpPane   \
   if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
