--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -56,6 +56,9 @@ set -g visual-activity on
 if-shell '[[ "$(tmux -V | cut -d' ' -f2)" -gt 2 ]]' \
   'source-file "${DOTFILES}/tmux/t2mouse.conf"'
 
+if-shell '[[ "$(tmux -V | cut -d' ' -f2)" -lt 2 ]]' \
+  'source-file "${DOTFILES}/tmux/t1mouse.conf"'
+
 # ============================================================================
 # Keyboard settings
 if-shell '[[ "$(tmux -V | cut -d' ' -f2)" -gt 2 ]]' \
