--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -41,8 +41,8 @@ set-option          -g  history-limit       10000
 
 # ============================================================================
 # Display settings
-if-shell '[[ "$(tmux -V | cut -d' ' -f2)" -gt 2 ]]' \
-  'set-option -ga terminal-overrides ",xterm-256color-italic:Tc"'
+# if-shell 'test "$(tmux -V | cut -d' ' -f2)" -gt 2' \
+#   'set-option -ga terminal-overrides ",xterm-256color-italic:Tc"'
 
 # Resize panes immediately for all clients
 setw -g aggressive-resize on
@@ -53,15 +53,15 @@ set -g visual-activity on
 
 # ============================================================================
 # Mouse settings
-if-shell '[[ "$(tmux -V | cut -d' ' -f2)" -gt 2 ]]' \
+if-shell "test \"$(tmux -V | cut -d' ' -f2)\" -gt 2" \
   'source-file "${DOTFILES}/tmux/t2mouse.conf"'
 
-if-shell '[[ "$(tmux -V | cut -d' ' -f2)" -lt 2 ]]' \
+if-shell "test \"$(tmux -V | cut -d' ' -f2)\" -lt 2" \
   'source-file "${DOTFILES}/tmux/t1mouse.conf"'
 
 # ============================================================================
 # Keyboard settings
-if-shell '[[ "$(tmux -V | cut -d' ' -f2)" -gt 2 ]]' \
+if-shell "test \"$(tmux -V | cut -d' ' -f2)\" -gt 2" \
   'source-file "${DOTFILES}/tmux/t2keyboard.conf"'
 
 # ----------------------------------------------------------------------------
