--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -6,6 +6,7 @@
 
 # ============================================================================
 # Plugins via tpm
+# ============================================================================
 
 set-environment   -g TMUX_PLUGIN_MANAGER_PATH "${DOTFILES}/tmux/plugins"
 
@@ -17,22 +18,19 @@ set-option        -g  @tpm_plugins '  \
 
 # ============================================================================
 # Environment
+# ============================================================================
 
 # Use UTF-8 - deprecated
 #set-option          -g  utf8
 #set-window-option   -g  utf8                on
 
-run-shell "tmux set-environment -g TMUX_VERSION_MAJOR $(tmux -V | cut -d' ' -f2 | cut -d'.' -f1 | sed 's/[^0-9]*//g')"
-run-shell "tmux set-environment -g TMUX_VERSION_MINOR $(tmux -V | cut -d' ' -f2 | cut -d'.' -f2 | sed 's/[^0-9]*//g')"
-
-# $TERM -- note that this uses a custom terminfo built against xterm so it
-# won't work in some terminal emulators. See $DOTFILES/terminfo/README.md
+# $TERM
+set-option -g default-terminal "tmux-256color"
 # mac: assume I'm using this custom xterm terminfo in iterm2
-if-shell 'test "${DOTFILES_DISTRO}" = "mac"' \
-  'set-option -g default-terminal "xterm-256color-italic"'
-# Linux: tmux-256color terminfo _likely_ comes with tmux
-if-shell 'test "${DOTFILES_OS}" = "Linux"' \
-  'set-option -g default-terminal "tmux-256color"'
+# note that this uses a custom terminfo built against xterm so it
+# won't work in some terminal emulators. See $DOTFILES/terminfo/README.md
+# if-shell 'test "${DOTFILES_DISTRO}" = "mac"' \
+#   'set-option -g default-terminal "xterm-256color-italic"'
 
 # for vim, focus pane on event like filemodified alerts
 set-option          -g  focus-events        on
@@ -41,8 +39,10 @@ set-option          -g  history-limit       10000
 
 # ============================================================================
 # Display settings
-# if-shell 'test "$(tmux -V | cut -d' ' -f2)" -gt 2' \
-#   'set-option -ga terminal-overrides ",xterm-256color-italic:Tc"'
+# ============================================================================
+
+if-shell 'test "$(tmux -V | cut -d' ' -f2)" -gt 2' \
+  'set-option -ga terminal-overrides ",xterm-256color-italic:Tc"'
 
 # Resize panes immediately for all clients
 setw -g aggressive-resize on
@@ -53,6 +53,8 @@ set -g visual-activity on
 
 # ============================================================================
 # Mouse settings
+# ============================================================================
+
 if-shell "test \"$(tmux -V | cut -d' ' -f2)\" -gt 2" \
   'source-file "${DOTFILES}/tmux/t2mouse.conf"'
 
@@ -61,27 +63,37 @@ if-shell "test \"$(tmux -V | cut -d' ' -f2)\" -lt 2" \
 
 # ============================================================================
 # Keyboard settings
+# ============================================================================
+
 if-shell "test \"$(tmux -V | cut -d' ' -f2)\" -gt 2" \
   'source-file "${DOTFILES}/tmux/t2keyboard.conf"'
 
 # ----------------------------------------------------------------------------
 # Keycodes
+# ----------------------------------------------------------------------------
+
 set-window-option   -g  xterm-keys          on
 # Reduce delay
 set-option          -gs escape-time         1
 
 # ----------------------------------------------------------------------------
-# Prefix -- leave on C-b since I actually use vim's C-a but never use C-b
-# (which is similar enough to pagination via C-d)
+# Prefix
+# ----------------------------------------------------------------------------
+
+# Leave on C-b since I actually use vim's C-a but never use C-b (which is
+# similar enough to pagination via C-d)
 #set-option          -g  prefix            C-a
 #unbind  C-b
 
 # ----------------------------------------------------------------------------
 # Reload tmux.conf
+# ----------------------------------------------------------------------------
+
 bind    r   source-file "${DOTFILES}/tmux/tmux.conf" \; display "R!"
 
 # ============================================================================
 # Title
+# ============================================================================
 
 set-option          -g  set-titles          on
 set-option          -g  set-titles-string   \
@@ -89,6 +101,7 @@ set-option          -g  set-titles-string   \
 
 # ============================================================================
 # Statusline
+# ============================================================================
 
 # useless https://github.com/tmux/tmux/issues/230
 #set-option          -g  status-utf8         on
@@ -102,6 +115,7 @@ set-option          -gs status-interval     1
 
 # ----------------------------------------------------------------------------
 # Colors
+# ----------------------------------------------------------------------------
 
 set-option          -g  status-bg           colour237
 set-option          -g  status-fg           colour244
@@ -111,6 +125,7 @@ set-window-option   -g  window-status-current-fg  colour250
 
 # ----------------------------------------------------------------------------
 # Contents
+# ----------------------------------------------------------------------------
 
 set-option          -g  status-justify      centre
 set-option          -g  status-left         \
@@ -120,6 +135,7 @@ set-option          -g  status-right        \
 
 # ============================================================================
 # Window and pane management
+# ============================================================================
 
 set-option          -g  pane-border-fg        "#2e2e2e"
 set-option          -g  pane-border-bg        black
@@ -128,12 +144,16 @@ set-option          -g  pane-active-border-bg black
 
 # ----------------------------------------------------------------------------
 # Start numbering from 1
+# ----------------------------------------------------------------------------
+
 set-option          -g  base-index          1
 set-window-option   -g  pane-base-index     1
 set-option          -g  renumber-windows    on
 
 # ----------------------------------------------------------------------------
 # Vim-style splitting, (v)ertical and horizontal (s)plit (and unbind defaults)
+# ----------------------------------------------------------------------------
+
 bind    v     split-window -h
 unbind  '"'
 bind    s     split-window -v
@@ -142,6 +162,8 @@ unbind  %
 # ----------------------------------------------------------------------------
 # Vim-style pane navigation
 # C-* variants so can hold ctrl down
+# ----------------------------------------------------------------------------
+
 bind    h     select-pane -L
 bind  C-h     select-pane -L
 bind    j     select-pane -D
@@ -153,6 +175,8 @@ bind  C-l     select-pane -R
 
 # ----------------------------------------------------------------------------
 # Vim-style pane resizing
+# ----------------------------------------------------------------------------
+
 bind    H     resize-pane -L 4
 bind    J     resize-pane -D 4
 bind    K     resize-pane -U 4
@@ -160,6 +184,8 @@ bind    L     resize-pane -R 4
 
 # ============================================================================
 # tpm init -- keep at bottom
+# ============================================================================
+
 run "${DOTFILES}/tmux/plugins/tpm/tpm"
 
 # vim: ft=tmux
