--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -41,6 +41,7 @@ set-option          -g  history-limit       10000
 # Display settings
 # ============================================================================
 
+# Enable italics using the termcap from xterm-256color-italic
 if-shell 'test "$(tmux -V | cut -d' ' -f2)" -gt 2' \
   'set-option -ga terminal-overrides ",xterm-256color-italic:Tc"'
 
