--- a/tmux/t1.conf
+++ b/tmux/t1.conf
@@ -1,5 +1,9 @@
 # ============================================================================
-# tmux 1 mouse scrolling
+# tmux 1 config
+# ============================================================================
+
+# ============================================================================
+# Mouse
 # ============================================================================
 
 set -g mode-mouse on
