--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -41,33 +41,12 @@ set-option          -g  history-limit       10000
 # Display settings
 # ============================================================================
 
-# Enable italics using the termcap from xterm-256color-italic
-if-shell 'test "$(tmux -V | cut -d' ' -f2)" -gt 2' \
-  'set-option -ga terminal-overrides ",xterm-256color-italic:Tc"'
-
 # Resize panes immediately for all clients
 setw -g aggressive-resize on
 
 # Check for activity and set status
 setw -g monitor-activity on
 set -g visual-activity on
-
-# ============================================================================
-# Mouse settings
-# ============================================================================
-
-if-shell "test \"$(tmux -V | cut -d' ' -f2)\" -gt 2" \
-  'source-file "${DOTFILES}/tmux/t2mouse.conf"'
-
-if-shell "test \"$(tmux -V | cut -d' ' -f2)\" -lt 2" \
-  'source-file "${DOTFILES}/tmux/t1mouse.conf"'
-
-# ============================================================================
-# Keyboard settings
-# ============================================================================
-
-if-shell "test \"$(tmux -V | cut -d' ' -f2)\" -gt 2" \
-  'source-file "${DOTFILES}/tmux/t2keyboard.conf"'
 
 # ----------------------------------------------------------------------------
 # Keycodes
@@ -184,9 +163,15 @@ bind    K     resize-pane -U 4
 bind    L     resize-pane -R 4
 
 # ============================================================================
+# tmux version specific
+# ============================================================================
+
+run-shell "${DOTFILES}/tmux/versions.sh"
+
+# ============================================================================
 # tpm init -- keep at bottom
 # ============================================================================
 
-run "${DOTFILES}/tmux/plugins/tpm/tpm"
+run-shell "${DOTFILES}/tmux/plugins/tpm/tpm"
 
 # vim: ft=tmux
