--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -13,7 +13,9 @@ set-environment   -g TMUX_PLUGIN_MANAGER_PATH "${DOTFILES}/tmux/plugins"
 # Define plugins using this method since I keep .tmux.conf outside of $HOME
 set-option        -g  @tpm_plugins '  \
   tmux-plugins/tpm                    \
+  tmux-plugins/tmux-open              \
   tmux-plugins/tmux-prefix-highlight  \
+  tmux-plugins/tmux-yank              \
 '
 
 # ============================================================================
