--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -39,16 +39,18 @@ set-option          -g  focus-events        on
 
 set-option          -g  history-limit       10000
 
+set-option          -g  @shell_mode         'vi'
+
 # ============================================================================
 # Display settings
 # ============================================================================
 
 # Resize panes immediately for all clients
-setw -g aggressive-resize on
+set-window-option -g aggressive-resize on
 
 # Check for activity and set status
-setw -g monitor-activity on
-set -g visual-activity on
+set-window-option -g monitor-activity on
+set-option        -g visual-activity on
 
 # ----------------------------------------------------------------------------
 # Keycodes
