--- a/weechat/irc.conf
+++ b/weechat/irc.conf
@@ -115,11 +115,11 @@ capabilities = ""
 command = ""
 command_delay = 0
 connection_timeout = 60
-default_msg_kick = ""
-default_msg_part = ""
-default_msg_quit = ""
 ipv6 = on
 local_hostname = ""
+msg_kick = ""
+msg_part = "WeeChat ${info:version}"
+msg_quit = "WeeChat ${info:version}"
 nicks = "davidosomething,davidosomething1,davidosomething2,davidosomething3,davidosomething4"
 nicks_alternate = on
 notify = ""
@@ -176,9 +176,9 @@ freenode.anti_flood_prio_high
 freenode.anti_flood_prio_low
 freenode.away_check
 freenode.away_check_max_nicks
-freenode.default_msg_kick
-freenode.default_msg_part
-freenode.default_msg_quit
+freenode.msg_kick
+freenode.msg_part
+freenode.msg_quit
 freenode.notify
 esper.addresses = "irc.esper.net/6697"
 esper.proxy
@@ -215,7 +215,7 @@ esper.anti_flood_prio_high
 esper.anti_flood_prio_low
 esper.away_check
 esper.away_check_max_nicks
-esper.default_msg_kick
-esper.default_msg_part
-esper.default_msg_quit
+esper.msg_kick
+esper.msg_part
+esper.msg_quit
 esper.notify
