--- a/weechat/plugins.conf
+++ b/weechat/plugins.conf
@@ -5,6 +5,7 @@
 [var]
 fifo.fifo = "on"
 guile.check_license = "off"
+javascript.check_license = "off"
 lua.check_license = "off"
 perl.check_license = "off"
 python.check_license = "off"
