--- a/weechat/weechat.conf
+++ b/weechat/weechat.conf
@@ -18,7 +18,7 @@ bar_more_left = "<<"
 bar_more_right = ">>"
 bar_more_up = "--"
 bare_display_exit_on_input = on
-bare_display_time_format = "%H:%M"
+bare_display_time_format = ""
 buffer_auto_renumber = on
 buffer_notify_default = all
 buffer_position = end
@@ -26,7 +26,7 @@ buffer_search_case_sensitive = off
 buffer_search_force_default = off
 buffer_search_regex = off
 buffer_search_where = prefix_message
-buffer_time_format = "%H:%M"
+buffer_time_format = ""
 color_basic_force_bold = off
 color_inactive_buffer = on
 color_inactive_message = on
@@ -103,13 +103,13 @@ prefix_join = "-->"
 prefix_network = "--"
 prefix_quit = "<--"
 prefix_same_nick = ""
-prefix_suffix = "|"
+prefix_suffix = "│"
 quote_nick_prefix = "<"
 quote_nick_suffix = ">"
 quote_time_format = "%H:%M"
 read_marker = line
 read_marker_always_show = off
-read_marker_string = "- "
+read_marker_string = "─"
 save_config_on_exit = on
 save_layout_on_exit = none
 scroll_amount = 3
@@ -267,7 +267,7 @@ status.conditions = ""
 status.filling_left_right = vertical
 status.filling_top_bottom = horizontal
 status.hidden = off
-status.items = "[time],[buffer_plugin],buffer_name+(buffer_modes),scroll,completion"
+status.items = "[buffer_plugin],buffer_name+(buffer_modes),scroll,completion"
 status.position = bottom
 status.priority = 500
 status.separator = off
@@ -286,7 +286,7 @@ title.position = top
 title.priority = 500
 title.separator = off
 title.size = 1
-title.size_max = 0
+title.size_max = 2
 title.type = window
 
 [layout]
