--- a/weechat/trigger.conf
+++ b/weechat/trigger.conf
@@ -34,6 +34,14 @@ cmd_pass.hook = modifier
 cmd_pass.post_action = none
 cmd_pass.regex = "==^((/(msg|m|quote) +nickserv +(id|identify|register|ghost +[^ ]+|release +[^ ]+|regain +[^ ]+) +)|/oper +[^ ]+ +|/quote +pass +|/set +[^ ]*password[^ ]* +|/secure +(passphrase|decrypt|set +[^ ]+) +)(.*)==${re:1}${hide:*,${re:+}}"
 cmd_pass.return_code = ok
+input_command_color.arguments = "input_text_display"
+input_command_color.command = ""
+input_command_color.conditions = "${tg_string} =~ ^/($|[^/])"
+input_command_color.enabled = on
+input_command_color.hook = modifier
+input_command_color.post_action = none
+input_command_color.regex = "#/(.+)#${color:39}/${color:74}${re:1}#"
+input_command_color.return_code = ok
 msg_auth.arguments = "5000|irc_message_auth"
 msg_auth.command = ""
 msg_auth.conditions = ""
