disable mouse gesturing

--- a/weechat/weechat.conf
+++ b/weechat/weechat.conf
@@ -573,22 +573,22 @@ meta2-D = "/cursor move left"
 @bar(nicklist):button1-gesture-down-long = "/bar scroll nicklist ${_window_number} e"
 @bar(nicklist):button1-gesture-up = "/bar scroll nicklist ${_window_number} -100%"
 @bar(nicklist):button1-gesture-up-long = "/bar scroll nicklist ${_window_number} b"
-@chat(script.scripts):button1 = "/window ${_window_number};/script go ${_chat_line_y}"
-@chat(script.scripts):button2 = "/window ${_window_number};/script go ${_chat_line_y};/script installremove -q ${script_name_with_extension}"
+# @chat(script.scripts):button1 = "/window ${_window_number};/script go ${_chat_line_y}"
+# @chat(script.scripts):button2 = "/window ${_window_number};/script go ${_chat_line_y};/script installremove -q ${script_name_with_extension}"
 @chat(script.scripts):wheeldown = "/script down 5"
 @chat(script.scripts):wheelup = "/script up 5"
 @item(buffer_nicklist):button1 = "/window ${_window_number};/query ${nick}"
-@item(buffer_nicklist):button1-gesture-left = "/window ${_window_number};/kick ${nick}"
-@item(buffer_nicklist):button1-gesture-left-long = "/window ${_window_number};/kickban ${nick}"
-@item(buffer_nicklist):button2 = "/window ${_window_number};/whois ${nick}"
-@item(buffer_nicklist):button2-gesture-left = "/window ${_window_number};/ban ${nick}"
+# @item(buffer_nicklist):button1-gesture-left = "/window ${_window_number};/kick ${nick}"
+# @item(buffer_nicklist):button1-gesture-left-long = "/window ${_window_number};/kickban ${nick}"
+# @item(buffer_nicklist):button2 = "/window ${_window_number};/whois ${nick}"
+# @item(buffer_nicklist):button2-gesture-left = "/window ${_window_number};/ban ${nick}"
 @bar:wheeldown = "/bar scroll ${_bar_name} ${_window_number} +20%"
 @bar:wheelup = "/bar scroll ${_bar_name} ${_window_number} -20%"
-@chat:button1 = "/window ${_window_number}"
-@chat:button1-gesture-left = "/window ${_window_number};/buffer -1"
-@chat:button1-gesture-left-long = "/window ${_window_number};/buffer 1"
-@chat:button1-gesture-right = "/window ${_window_number};/buffer +1"
-@chat:button1-gesture-right-long = "/window ${_window_number};/input jump_last_buffer"
+# @chat:button1 = "/window ${_window_number}"
+# @chat:button1-gesture-left = "/window ${_window_number};/buffer -1"
+# @chat:button1-gesture-left-long = "/window ${_window_number};/buffer 1"
+# @chat:button1-gesture-right = "/window ${_window_number};/buffer +1"
+# @chat:button1-gesture-right-long = "/window ${_window_number};/input jump_last_buffer"
 @chat:ctrl-wheeldown = "/window scroll_horiz -window ${_window_number} +10%"
 @chat:ctrl-wheelup = "/window scroll_horiz -window ${_window_number} -10%"
 @chat:wheeldown = "/window scroll_down -window ${_window_number}"
