tmux:unset default-terminal and add truecolor override for t2

--- a/tmux/t2.conf
+++ b/tmux/t2.conf
@@ -6,9 +6,8 @@
 # Terminal
 # ============================================================================
 
-# Enable true color and italics using the termcap from xterm-256color-italic
-if-shell '[ "$TMUX_VERSION_MAJOR" -ge 2 ]' \
-  'set-option -ga terminal-overrides ",xterm-256color-italic:Tc"'
+# Enable true color
+set-option -ga terminal-overrides ",*-256col*:Tc"
 
 # ============================================================================
 # Keyboard
