--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -26,13 +26,8 @@ set-option        -g  @tpm_plugins '  \
 #set-option          -g  utf8
 #set-window-option   -g  utf8                on
 
-# $TERM
-set-option -g default-terminal "tmux-256color"
-# mac: assume I'm using this custom xterm terminfo in iterm2
-# note that this uses a custom terminfo built against xterm so it
-# won't work in some terminal emulators. See $DOTFILES/terminfo/README.md
-# if-shell 'test "${DOTFILES_DISTRO}" = "mac"' \
-#   'set-option -g default-terminal "xterm-256color-italic"'
+# $TERM -- removed, handled by versions.sh (bottom)
+#set-option -g default-terminal "tmux-256color"
 
 # for vim, focus pane on event like filemodified alerts
 set-option          -g  focus-events        on
