--- a/.editorconfig
+++ b/.editorconfig
@@ -3,25 +3,17 @@ root = true
 [*]
 charset = utf-8
 end_of_line = LF
-indent_style = space
 indent_size = 2
+indent_style = space
 
 # html is not minified so reduce character output by using real tabs
 # use indent size 4 for parity with PHP
-[*.{html,xml}]
+[*.{hbs,html,marko,mustache,xml}]
 indent_style = tab
 tab_width = 2
-
-[*.{hbs,mustache}]
-indent_style = tab
-tab_width = 2
-
-# shouldn't be editing css anyway
-[*.css]
-insert_final_newline = true
 
 # sass-lint standards
-[*.{sass,scss}]
+[*.{css,less,sass,scss}]
 insert_final_newline = true
 
 # coffeelint standards
@@ -29,18 +21,24 @@ insert_final_newline = true
 insert_final_newline = true
 
 # jshint standards
-[*.{js,json}]
+[*.{js,json,jsx,ts,tsx}]
+indent_size = 2
+indent_style = space
 insert_final_newline = true
 
-[*.markdown]
-indent_size = 4
+[*.{markdown,md}]
+indent_size = 2
 
 # PHP http://make.wordpress.org/core/handbook/coding-standards/php/
-[*.php]
-indent_style = space
-tab_width = 4
+[*.{blade,php}]
 indent_size = 4
+indent_style = space
 insert_final_newline = true
+tab_width = 4
 
-[*.{sh,zsh}]
+[*.{bash,sh,zsh}]
 max_line_length = 78
+
+[*.yaml]
+indent_size = 2
+indent_style = space
