--- a/linux/subversion/config
+++ b/linux/subversion/config
@@ -14,7 +14,7 @@ password-stores = gpg-agent,gnome-keyring
 ###   gnome-keyring        (Unix-like systems)
 ###   kwallet              (Unix-like systems)
 ###   gpg-agent            (Unix-like systems)
-###   keychain             (Mac OS X)
+###   keychain             (macOS)
 ###   windows-cryptoapi    (Windows)
 # password-stores = gpg-agent,gnome-keyring,kwallet
 ### To disable all password stores, use an empty list:
