--- a/subversion/config
+++ b/subversion/config
@@ -12,7 +12,7 @@
 ###   gnome-keyring        (Unix-like systems)
 ###   kwallet              (Unix-like systems)
 ###   gpg-agent            (Unix-like systems)
-###   keychain             (Mac OS X)
+###   keychain             (macOS)
 ###   windows-cryptoapi    (Windows)
 # password-stores = gpg-agent,gnome-keyring,kwallet
 ### To disable all password stores, use an empty list:
