switch to -sa, remove bell

--- a/tmux/t2.4.conf
+++ b/tmux/t2.4.conf
@@ -7,7 +7,7 @@
 # ============================================================================
 
 # Enable true color
-set-option -ga terminal-overrides ",*-256col*:Tc"
+set-option -sa terminal-overrides ",*-256col*:Tc"
 
 # ============================================================================
 # Keyboard
