--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -37,6 +37,13 @@ set-option          -g  history-limit       10000
 set-option          -g  @shell_mode         'vi'
 
 # ============================================================================
+# Notify
+# ============================================================================
+
+# No bells at all
+set -g bell-action none
+
+# ============================================================================
 # Display settings
 # ============================================================================
 
