--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -134,19 +134,19 @@ term xterm-kitty
 
 # The width (in pts) of window borders. Will be rounded to the nearest number of pixels based on screen resolution.
 # Note that borders are displayed only when more than one window is visible. They are meant to separate multiple windows.
-window_border_width 2
+window_border_width 4
 
 # The window margin (in pts) (blank area outside the border)
-window_margin_width 2
+window_margin_width 0
 
 # The window padding (in pts) (blank area between the text and the window border)
-window_padding_width 2
+window_padding_width 8
 
 # The color for the border of the active window
-active_border_color #00ff00
+active_border_color #112233
 
 # The color for the border of inactive windows
-inactive_border_color #cccccc
+inactive_border_color #222222
 
 # Tab-bar colors
 active_tab_foreground #000
