dotfiles.plist runs mac/environment

--- a/mac/dotfiles.plist
+++ b/mac/dotfiles.plist
@@ -6,13 +6,15 @@
     <string>davidosomething.dotfiles</string>
     <key>ProgramArguments</key>
     <array>
-      <string>sh</string>
-      <string>-c</string>
-      <string>
-	launchctl setenv GNUPGHOME ~/.local/share/gnupg
-      </string>
+      <string>~/.dotfiles/mac/enviroment</string>
     </array>
+    <key>KeepAlive</key>
+    <false/>
     <key>RunAtLoad</key>
     <true/>
+    <key>WatchPaths</key>
+    <array>
+      <string>~/.dotfiles/mac/environment</string>
+    </array>
   </dict>
 </plist>
