--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,12 +1,16 @@
 Pygments
 bashate
 flake8
-frosted
+flake8-commas
+flake8-docstrings
+flake8-import-order
+flake8-quotes
 neovim
 neovim-remote
-pep8
 prospector
 pycodestyle
+pydocstyle
+pyflakes
 pylint
 vim-vint
 vulture
