--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -235,6 +235,8 @@ map ctrl+shift+8        eighth_window
 map ctrl+shift+9        ninth_window
 map ctrl+shift+0        tenth_window
 
+map ctrl+shift+d combine : new_window : next_layout
+
 # Tab management
 map ctrl+shift+right    next_tab
 map ctrl+shift+left     previous_tab
