--- a/terminator/config
+++ b/terminator/config
@@ -79,7 +79,7 @@
   [[default]]
     background_color = "#1e1e1e"
     cursor_color = "#a7a7a7"
-    custom_command = cd $HOME; $SHELL
+    custom_command = cd -- $HOME; $SHELL
     font = Fira Mono for Powerline 10
     foreground_color = "#a7a7a7"
     palette = "#1e1e1e:#cf6a4c:#8f9d6a:#f9ee98:#7587a6:#9b859d:#afc4db:#a7a7a7:#5f5a60:#cf6a4c:#8f9d6a:#f9ee98:#7587a6:#9b859d:#afc4db:#ffffff"
