run glob echint

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,14 +5,4 @@ install:
   - npm install --global echint
 script:
   - pwd
-  - echint "${PWD}/bash/*"
-  - echint "${PWD}/bin/*"
-  - echint "${PWD}/lib/*"
-  - echint "${PWD}/node/*"
-  - echint "${PWD}/php/*"
-  - echint "${PWD}/python/*"
-  - echint "${PWD}/r/*"
-  - echint "${PWD}/ruby/*"
-  - echint "${PWD}/shell/*"
-  - echint "${PWD}/vim/**/*.vim"
-  - echint "${PWD}/zsh/**/*"
+  - echint
