--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 language: node_js
 node_js:
   - "8"
+before_install:
+  - sudo apt-get -qq update
+  - sudo apt-get install -y shellcheck
 install:
   - npm install --global echint
 script:
-  - pwd
   - echint
+  - shellcheck --shell=sh shell/*.sh
