--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_install:
   - sudo apt-get -qq update
   - sudo apt-get install -y shellcheck
 install:
-  - npm install --global echint
+  - npm install --production --global echint
 script:
   - echint
   - shellcheck --exclude=SC1090,SC2148 --shell=sh shell/*.sh
